// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseForm should render correctly 1`] = `
<StyledForm
  onSubmit={[Function]}
>
  <styled.input
    autoFocus={true}
    id="expenseDescription"
    name="description"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <styled.input
    id="expenseAmount"
    name="amount"
    onChange={[Function]}
    placeholder="Amount"
    type="text"
    value=""
  />
  <StyledSingleDatePicker
    date={"1970-01-01T00:00:00.000Z"}
    focused={false}
    id="datePicker"
    isOutsideRange={[Function]}
    numberOfMonths={1}
    onDateChange={[Function]}
    onFocusChange={[Function]}
  />
  <styled.input
    id="expenseNote"
    name="note"
    onChange={[Function]}
    placeholder="Add a note to your expense (optional)"
    type="text"
    value=""
  />
  <Error
    error={false}
    helperText=""
  />
  <Styled(Button)>
    Add
     expense
  </Styled(Button)>
</StyledForm>
`;

exports[`ExpenseForm should render error for invalid form submission 1`] = `
<StyledForm
  onSubmit={[Function]}
>
  <styled.input
    autoFocus={true}
    id="expenseDescription"
    name="description"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <styled.input
    id="expenseAmount"
    name="amount"
    onChange={[Function]}
    placeholder="Amount"
    type="text"
    value=""
  />
  <StyledSingleDatePicker
    date={"1970-01-01T00:00:00.000Z"}
    focused={false}
    id="datePicker"
    isOutsideRange={[Function]}
    numberOfMonths={1}
    onDateChange={[Function]}
    onFocusChange={[Function]}
  />
  <styled.input
    id="expenseNote"
    name="note"
    onChange={[Function]}
    placeholder="Add a note to your expense (optional)"
    type="text"
    value=""
  />
  <Error
    error={true}
    helperText="Please provide description and amount."
  />
  <Styled(Button)>
    Add
     expense
  </Styled(Button)>
</StyledForm>
`;

exports[`ExpenseForm should render with expense data 1`] = `
<StyledForm
  onSubmit={[Function]}
>
  <styled.input
    autoFocus={true}
    id="expenseDescription"
    name="description"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value="Another one"
  />
  <styled.input
    id="expenseAmount"
    name="amount"
    onChange={[Function]}
    placeholder="Amount"
    type="text"
    value="3400.98"
  />
  <StyledSingleDatePicker
    date={"2020-08-30T05:05:26.345Z"}
    focused={false}
    id="datePicker"
    isOutsideRange={[Function]}
    numberOfMonths={1}
    onDateChange={[Function]}
    onFocusChange={[Function]}
  />
  <styled.input
    id="expenseNote"
    name="note"
    onChange={[Function]}
    placeholder="Add a note to your expense (optional)"
    type="text"
    value="Text goes here"
  />
  <Error
    error={false}
    helperText=""
  />
  <Styled(Button)>
    Update
     expense
  </Styled(Button)>
</StyledForm>
`;
